--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <label for="selected-websites">Sites web :</label><br>
         <textarea name="selected-websites" id="selected-websites" cols="40" rows="10"></textarea><br>
         <button type="submit">Sauvegarder</button>
+        <button type="submit" id="selected-disable">Eteindre</button>
         <button type="reset">Supprimer</button>
     </form>
     <canvas id="network" width="800" height="600"></canvas>
