--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     <canvas id="network" width="800" height="600"></canvas>
     <script src="network.js" defer></script>
     <script src="server.js" defer></script>
+    <script src="dns.js" defer></script>
     <script src="index.js" defer></script>
 </body>
 </html>
