Breadth-First Search

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="pop-up-background"></div>
-    <form action="#" method="get" id="add-server-form">
+    <form action="#" method="get" id="add-server-form" class="pop-up">
         <label for="ip-1">Adresse IP :</label><br>
         <input type="number" name="ip-1" id="ip-1" value="127" min="1" max="255">
         <input type="number" name="ip-2" id="ip-2" value="0" min="0" max="255">
@@ -19,7 +19,7 @@
         <button type="submit">Créer</button>
         <button type="reset">Annuler</button>
     </form>
-    <form action="#" method="get" id="linking-form">
+    <form action="#" method="get" id="linking-form" class="pop-up">
         <label for="latency">Latence :</label><br>
         <input type="number" name="latency" id="latency" value="1" min="1"><br>
         <button type="submit">Lier</button>
@@ -31,24 +31,28 @@
     <menu id="server-context">
         <button type="button" id="link-server">Etablir une liaison</button>
     </menu>
-    <aside>
-        <form action="#" method="get" id="selected-server-form">
-            <h1>Serveur sélectionné</h1>
-            <p>Adresse IP : <span id="selected-ip">0.0.0.0</span></p>
-            <label for="selected-websites">Sites web :</label><br>
-            <textarea name="selected-websites" id="selected-websites" cols="40" rows="10"></textarea><br>
-            <button type="submit">Sauvegarder</button>
-            <button type="submit" id="selected-disable">Eteindre</button>
-            <button type="reset">Supprimer</button>
-        </form>
-        <hr>
-        <form id="url-search-form">
-            <label for="url">URL :</label><br>
-            <input type="text" name="url" id="url"><br>
-            <button type="submit">Rechercher</button>
-        </form>
-    </aside>
-    <canvas id="network" width="800" height="600"></canvas>
+    <main>
+        <aside>
+            <form action="#" method="get" id="selected-server-form">
+                <h1>Serveur sélectionné</h1>
+                <p>Adresse IP : <span id="selected-ip">0.0.0.0</span></p>
+                <label for="selected-websites">Sites web :</label><br>
+                <textarea name="selected-websites" id="selected-websites" cols="40" rows="10"></textarea><br>
+                <button type="submit">Sauvegarder</button>
+                <button type="submit" id="selected-disable">Eteindre</button>
+                <button type="reset">Supprimer</button>
+            </form>
+            <hr>
+            <form id="url-search-form">
+                <label for="url">URL :</label><br>
+                <input type="text" name="url" id="url"><br>
+                <button type="submit">Rechercher</button>
+            </form>
+        </aside>
+        <section>
+            <canvas id="network" width="800" height="600"></canvas>
+        </section>
+    </main>
     <script src="network.js" defer></script>
     <script src="server.js" defer></script>
     <script src="dns.js" defer></script>
